--- a/src/pages/controller/[gameId]/index.module.css
+++ b/src/pages/controller/[gameId]/index.module.css
@@ -1,5 +1,6 @@
 .controller {
   display: flex;
+  margin-left: 10%;
 }
 
 .cross {
@@ -12,7 +13,7 @@
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   width: 0px;
-  height: 60px;
+  height: 60%;
   border-left: 30px solid transparent;
   border-right: 30px solid transparent;
   border-bottom: 30px solid black;
@@ -21,8 +22,8 @@
 .cross .left {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
-  width: 60px;
-  height: 0px;
+  width: 60%;
+  height: 0%;
   border-top: 30px solid transparent;
   border-bottom: 30px solid transparent;
   border-right: 30px solid black;
@@ -31,8 +32,8 @@
 .cross .center {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
-  width: 40px;
-  height: 40px;
+  width: 40%;
+  height: 40%;
   background-color: black;
   border-radius: 50%;
   transform: translate(9.5px, 10px);
@@ -41,8 +42,8 @@
 .cross .right {
   grid-row: 2 / 3;
   grid-column: 3 / 4;
-  width: 0px;
-  height: 0px;
+  width: 0%;
+  height: 0%;
   border-top: 30px solid transparent;
   border-left: 30px solid black;
   border-bottom: 30px solid transparent;
@@ -51,27 +52,41 @@
 .cross .bottom {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
-  width: 0px;
-  height: 0px;
+  width: 0%;
+  height: 0%;
   border-left: 30px solid transparent;
   border-right: 30px solid transparent;
   border-top: 30px solid black;
 }
 
+.button {
+  display: flex;
+  margin-top: 7%;
+  margin-left: 20%;
+}
+
 .btnone {
-  margin-top: 103px;
-  margin-left: 50px;
-  border-radius: 50px;
+  margin-top: 100px;
+  border-radius: 50%;
   width: 60px;
   height: 60px;
-  background-color: red;
+  background: blue;
+}
+@keyframes btnone {
+  100% {
+    background-position: 200%;
+  }
 }
 
 .btntwo {
-  margin-top: 103px;
-  margin-left: 50px;
-  border-radius: 50px;
+  margin-left: 30px;
+  border-radius: 50%;
   width: 60px;
   height: 60px;
-  background-color: blue;
+  background: red;
+}
+@keyframes btntwo {
+  100% {
+    background-position: 200%;
+  }
 }
